--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ h1 {
    transition: color .5s ease-in-out;
 }
 
-.active {
+.clicked {
    color : tomato;
+}
+
+.sexy-font {
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
