--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,7 @@
 body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+body {
+   background-color: orange;
+}
