--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
 .hidden {
    display: none;
 }
+
+.bgdiv {
+   position: absolute;
+   top : 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   contain: layout paint style;
+   z-index: -1;
+}
+
+.bgimg {
+   object-fit: cover;
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   object-position: center;
+}
