--- a/css/style.css
+++ b/css/style.css
@@ -8,22 +8,18 @@ html, body {
    margin: 0;
 }
 
-.bgdiv {
-   position: absolute;
-   top : 0;
-   left: 0;
-   right: 0;
-   bottom: 0;
-   contain: layout paint style;
-   z-index: -1;
+#greeting {
+   font-size: 75px;
+   font-weight: bold;
+   color: white;
+   z-index: 2;
 }
 
-.bgimg {
-   object-fit: cover;
-   width: 100%;
-   height: 100%;
-   position: absolute;
-   object-position: center;
+#clock {
+   font-size: 150px;
+   font-weight: bolder;
+   color: white;
+   z-index: 1;
 }
 
 .viewport {
@@ -39,4 +35,53 @@ html, body {
    align-items: center;
    align-content: center;
    justify-content: center;
+   z-index: 1;
+}
+
+#todo-form {
+   z-index: 2;
+}
+
+
+#quote {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   z-index: 1;
+   font-family: Arial, Helvetica, sans-serif;
+   font-size: 30px;
+   font-weight: 600;
+}
+
+.bgdiv {
+   position: absolute;
+   top : 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   contain: layout paint style;
+}
+
+.bgimg {
+   object-fit: cover;
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   object-position: center;
+   z-index: -1;
+}
+
+.bgop {
+   object-fit: cover;
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   object-position: center;
+   background-color: black;
+   opacity: 0.33;
+   z-index: 0;
+}
+
+.search {
+   z-index: 2;
 }
