--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,31 @@ html, body {
    z-index: 0;
 }
 
-.search {
+.searchbox {
+   width: 35%;
+   height: 5%;
    z-index: 2;
+   border-radius: 24px;
+   border: 1px solid #dfe1e5;
+   box-shadow: none;
+   margin: 0 auto;
+   display: flex;
+   align-items: center;
+   background-color: #dfe1e5;
+   margin-top: 10px;
+   
 }
+
+.searchbox > a {
+   margin-top: 3px;
+}
+
+
+.search {
+   width: 90%;
+   height: 100%;
+   background-color: transparent;
+   border: none;
+   outline: none;
+}
+
