--- a/css/style.css
+++ b/css/style.css
@@ -134,3 +134,15 @@ html, body {
    z-index: 20;
    cursor: pointer;
 }
+
+.gitbox > a {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 50px;
+   height: 50px;
+   cursor: pointer;
+   transition: right .2s ease-in-out;
+   white-space: nowrap;
+   color: #fff;
+}
