--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ html, body {
    flex-direction: column;
    align-items: center;
    z-index: 1;
-   font-family: Arial, Helvetica, sans-serif;
+   font-family: 'Times New Roman', Times, serif;
    font-size: 30px;
    font-weight: 600;
 }
