todo z-index 수정, 폰트 색 수정

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,11 @@ html, body {
    font-weight: 600;
 }
 
+#todo-list {
+   color: #fff;
+   z-index: 1;
+}
+
 .bgdiv {
    position: absolute;
    top : 0;
