slide btn + layout 조정

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,8 @@ html, body {
    font-family: 'Times New Roman', Times, serif;
    font-size: 30px;
    font-weight: 600;
+   position: absolute;
+   bottom: 100px;
 }
 
 #todo-list {
@@ -148,4 +150,12 @@ html, body {
    transition: right .2s ease-in-out;
    white-space: nowrap;
    color: #fff;
+}
+
+.slidebtn {
+   z-index: 2;
+}
+
+.slidebtn > button {
+   border-radius: 20;
 }
