--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@ html, body {
 }
 
 #greeting {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
    font-size: 75px;
    font-weight: bold;
    color: white;
@@ -42,6 +45,9 @@ html, body {
 }
 
 #todo-form {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
    z-index: 2;
 }
 
@@ -102,7 +108,6 @@ html, body {
    align-items: center;
    margin-top: 10px;
    
-
    background-color: hsla(0,0%,100%,.5);
    color: #000;
    transition: background-color .3s,box-shadow .3s;
@@ -157,5 +162,20 @@ html, body {
 }
 
 .slidebtn > button {
-   border-radius: 20;
+   margin: 0;
+   padding: 0;
+   border-radius: 50%;
+   width: 15px;
+   height: 15px;
+   background: hsla(0,0%,100%,.4);
+   border: 0;
+   cursor: pointer;
+}
+
+#slide_div1 {
+   z-index: 10;
+}
+
+#slide_div2 {
+   z-index: 10;
 }
