--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,9 @@ html, body {
 }
 
 #clock {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
    font-size: 150px;
    font-weight: bolder;
    color: white;
@@ -91,7 +94,6 @@ html, body {
 }
 
 #todo-list {
-   color: #fff;
    z-index: 1;
 }
 
@@ -203,5 +205,10 @@ html, body {
 }
 
 #slide_div2 {
+   width: 50%;
+   height: 50%;
+   border-radius: 14px;
+   background-color: #fff;
+   box-shadow: 0 2px 12px rgb(0 0 0 / 50%);
    z-index: 10;
 }
