--- a/css/style.css
+++ b/css/style.css
@@ -79,8 +79,23 @@ html, body {
    flex-direction: column;
    align-items: center;
    z-index: 2;
+   height: 40px;
+   border-radius: 48px;
+   box-sizing: border-box;
+   margin: 0 12px 15px;
+   box-shadow: inset 0 0 0 1.5px #05c3a7, 0 -10px 10px #fff;
 }
 
+#todo-form > input {
+   width: 100%;
+   height: 100%;
+   background: transparent;
+   border: 0;
+   padding-inline-start: 10px;
+   font-size: 13px;
+   color: #a8a8a8;
+   box-sizing: border-box;
+}
 
 #quote {
    display: flex;
@@ -95,12 +110,30 @@ html, body {
 }
 
 #todo-list {
+   list-style-type: none;
+   padding-left: 20px;
    z-index: 1;
+   font-size: 13px;
+}
+
+#todo-list > li {
+   display: flex;
+   flex-wrap: nowrap;
+   align-items: center;
 }
 
 #todo-list > li > button {
    position: absolute;
    right: 5px;
+}
+
+#todo-list > li > input {
+   margin-right: 10px;
+   width: 18px;
+   height: 18px;
+   border-radius: 50%;
+   border: 1.5px solid var(--checkbox-unchecked-border) ;
+   background-color: transparent;
 }
 
 .bgdiv {
@@ -249,11 +282,24 @@ html, body {
    margin: 10px;
    z-index: 10;
    overflow: auto;
+   font-family: sans-serif;
 }
 
 .todo-title {
+   font-size: 14px;
+   font-weight: 400;
    text-align: center;
-   padding: 3px;
+   padding-block-start: 20px;
+   padding-block-end: 7px;
+}
 
+.todo-content {
+   position: relative;
+   flex:1;
+   overflow: auto;
+   box-sizing: border-box;
+   padding-block-end: 10px;
+   min-height: 70%;
+   max-height: 70%;
 }
 
