--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,9 @@ html, body {
    box-sizing: border-box;
    margin: 0 12px 15px;
    box-shadow: inset 0 0 0 1.5px #05c3a7, 0 -10px 10px #fff;
+   transition: box-shadow 2s;
 }
+
 
 #todo-form > input {
    width: 100%;
@@ -95,6 +97,7 @@ html, body {
    font-size: 13px;
    color: #a8a8a8;
    box-sizing: border-box;
+   outline: none;
 }
 
 #quote {
@@ -166,7 +169,7 @@ html, body {
 }
 
 .searchbox {
-   width: 50%;
+   width: 30%;
    height: 5%;
    z-index: 2;
    border-radius: 8px;
@@ -209,7 +212,7 @@ html, body {
    top: 10px;
    left: 10px;
    z-index: 2;
-   background-color: hsla(0,0%,100%,.4);
+   background-color: transparent;
    border-radius: 14px;
    padding: 5px;
    display: flex;
@@ -274,7 +277,7 @@ html, body {
 
 #slide_div2 {
    position: relative;
-   width: 50%;
+   width: 30%;
    height: 50%;
    border-radius: 14px;
    background-color: #fff;
@@ -283,13 +286,15 @@ html, body {
    z-index: 10;
    overflow: auto;
    font-family: sans-serif;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-around;
 }
 
 .todo-title {
    font-size: 14px;
    font-weight: 400;
    text-align: center;
-   padding-block-start: 20px;
    padding-block-end: 7px;
 }
 
