--- a/css/style.css
+++ b/css/style.css
@@ -1,409 +1,421 @@
 .hidden {
-   display: none !important;
+    display: none !important;
 }
 
-html, body {
-   width: 100%;
-   height: 100%;
-   margin: 0;
-   overflow: auto;
+body,
+html {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    overflow: auto;
 }
 #login-form {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 2;
 }
 
-#login-form > input {
-   border: none;
-   border-bottom: 5px solid #fff;
-   background: transparent;
-   width: 90%;
-   outline: none;
 
-   text-align: center;
-   font-size: 30px;
-   font-weight: bold;
-   color: #fff;
-   margin-top: 10px;
+#login-form > input {
+    border: none;
+    border-bottom: 5px solid #fff;
+    background: transparent;
+    width: 35rem;
+    outline: none;
+
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    color: #fff;
+    margin-top: 10px;
 }
 
 .nameQ {
-   font-size: 60px;
-   color: #fff;
-   margin: 0 auto;
-   margin-top: -23px;
-   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 60px;
+    color: #fff;
+    margin: -23px auto 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-
 #greeting {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   font-size: 75px;
-   font-weight: bold;
-   color: white;
-   z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 75px;
+    font-weight: bold;
+    color: white;
+    z-index: 2;
 }
 
 #clock {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   font-size: 150px;
-   font-weight: bolder;
-   color: white;
-   z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 150px;
+    font-weight: bolder;
+    color: white;
+    z-index: 1;
 }
 
 .viewport {
-   display: flex;
-   height: 100%;
-   width: 100%;
-   top: 0;
-   bottom: 0;
-   left: 0;
-   right: 0;
-   opacity: 1;
-   flex-direction: column;
-   align-items: center;
-   align-content: center;
-   justify-content: center;
-   z-index: 1;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 1;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    z-index: 1;
+}
+
+.viewport > #slide_div1 {
+
 }
 
 #todo-form {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   z-index: 2;
-   height: 40px;
-   border-radius: 48px;
-   box-sizing: border-box;
-   margin: 0 12px 15px;
-   box-shadow: inset 0 0 0 1.5px #05c3a7, 0 -10px 10px #fff;
-   transition: box-shadow 2s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 2;
+    height: 40px;
+    border-radius: 48px;
+    box-sizing: border-box;
+    margin: 0 12px 15px;
+    box-shadow: inset 0 0 0 1.5px #05c3a7, 0 -10px 10px #fff;
+    transition: box-shadow 2s;
 }
 
-
 #todo-form > input {
-   width: 100%;
-   height: 100%;
-   background: transparent;
-   border: 0;
-   padding-inline-start: 10px;
-   font-size: 13px;
-   color: #a8a8a8;
-   box-sizing: border-box;
-   outline: none;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: 0;
+    padding-inline-start: 10px;
+    font-size: 13px;
+    color: #a8a8a8;
+    box-sizing: border-box;
+    outline: none;
 }
 
 #quote {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   z-index: 1;
-   font-family: 'Times New Roman', Times, serif;
-   font-size: 30px;
-   font-weight: 600;
-   position: absolute;
-   bottom: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 1;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 30px;
+    font-weight: 600;
+    position: absolute;
+    bottom: 0;
 }
 
 #todo-list {
-   list-style-type: none;
-   padding-left: 20px;
-   z-index: 1;
-   font-size: 13px;
+    list-style-type: none;
+    padding-left: 20px;
+    z-index: 1;
+    font-size: 13px;
 }
 
 #todo-list > li {
-   display: flex;
-   flex-wrap: nowrap;
-   align-items: center;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
 }
 
 #todo-list > li > a {
-   position: absolute;
-   right: 5px;
+    position: absolute;
+    right: 5px;
 }
 
 #todo-list > li > input {
-   margin-right: 10px;
-   width: 18px;
-   height: 18px;
-   border-radius: 50%;
-   border: 1.5px solid var(--checkbox-unchecked-border) ;
-   background-color: transparent;
+    margin-right: 10px;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    border: 1.5px solid var(--checkbox-unchecked-border);
+    background-color: transparent;
 }
 
 .bgdiv {
-   position: absolute;
-   top : 0;
-   left: 0;
-   right: 0;
-   bottom: 0;
-   contain: layout paint style;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    contain: layout paint style;
 }
 
 .bgimg {
-   object-fit: cover;
-   width: 100%;
-   height: 100%;
-   position: absolute;
-   object-position: center;
-   z-index: -1;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-position: center;
+    z-index: -1;
 }
 
 .bgop {
-   object-fit: cover;
-   width: 100%;
-   height: 100%;
-   position: absolute;
-   object-position: center;
-   background-color: black;
-   opacity: 0.33;
-   z-index: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-position: center;
+    background-color: black;
+    opacity: 0.33;
+    z-index: 0;
 }
 
 .searchbox {
-   width: 30%;
-   height: 5%;
-   z-index: 2;
-   border-radius: 8px;
-   box-shadow: 0 4px 30px rgb(0 0 0 / 25%);
-   display: flex;
-   align-items: center;
-   margin-top: 10px;
-   
-   background-color: hsla(0,0%,100%,.5);
-   color: #000;
-   transition: background-color .3s,box-shadow .3s;
-   backdrop-filter:blur(8px);
+    width: 30%;
+    height: 5%;
+    z-index: 2;
+    border-radius: 8px;
+    box-shadow: 0 4px 30px rgb(0 0 0 / 25%);
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+
+    background-color: hsla(0,0%,100%,.5);
+    color: #000;
+    transition: background-color 0.3s,box-shadow 0.3s;
+    backdrop-filter:blur(8px);
 }
 
 .searchbox > a {
-   margin: 5px;
+    margin: 5px;
 }
 
 .searchbox > a > img {
-   vertical-align: middle;
-   filter: grayscale(1);
+    vertical-align: middle;
+    filter: grayscale(1);
 }
 
 .search {
-   width: 90%;
-   height: 100%;
-   background-color: transparent;
-   font-size: 16px;
-   border: none;
-   outline: none;
+    width: 90%;
+    height: 100%;
+    background-color: transparent;
+    font-size: 16px;
+    border: none;
+    outline: none;
 }
 
 .search::placeholder {
-   font-weight: 600;
-   color: white;
+    font-weight: 600;
+    color: white;
 }
 
 .viewport-sub {
-   position: absolute;
-   top: 0px;
-   left: 10px;
-   z-index: 2;
-   background-color: transparent;
-   border-radius: 14px;
-   padding: 5px;
-   display: flex;
-   flex-direction: row;
-   align-items: center;
-   font-weight: bold;
-   font-size: 16px;
-   color: #fff;
-   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    position: absolute;
+    top: 0;
+    left: 10px;
+    z-index: 2;
+    background-color: transparent;
+    border-radius: 14px;
+    padding: 5px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-weight: bold;
+    font-size: 16px;
+    color: #fff;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .viewport-sub > .weather {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .viewport-sub > div {
-   background-color: transparent;
-   border-radius: 14px;
-   padding: 5px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   font-weight: bold;
-   font-size: 16px;
-   color: #fff;
-   margin: 5px;
-   cursor: pointer;
+    background-color: transparent;
+    border-radius: 14px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: bold;
+    font-size: 16px;
+    color: #fff;
+    margin: 5px;
+    cursor: pointer;
 }
 
 .viewport-sub > div:hover {
-   background-color: hsla(0,0%,100%,.4);
+    background-color: hsla(0,0%,100%,.4);
 }
 
 .viewport-sub > svg {
-   margin-left: 5px;
+    margin-left: 5px;
 }
 
 .gitbox {
-   position: absolute;
-   top: 10px;
-   right: 10px;
-   z-index: 20;
-   cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 20;
+    cursor: pointer;
 }
 
 .gitbox > a {
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   width: 50px;
-   height: 50px;
-   cursor: pointer;
-   white-space: nowrap;
-   background-color: hsla(0,0%,100%,.4);
-   border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    white-space: nowrap;
+    background-color: hsla(0,0%,100%,.4);
+    border-radius: 50%;
 }
 
 .slidebtn {
-   position: relative;
-   margin: 10px;
-   z-index: 2;
+    position: relative;
+    margin: 10px;
+    z-index: 2;
 }
 
 .slidebtn > button {
-   margin: 0;
-   padding: 0;
-   border-radius: 50%;
-   width: 15px;
-   height: 15px;
-   background: hsla(0,0%,100%,.4);
-   border: 0;
-   cursor: pointer;
+    margin: 0;
+    padding: 0;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    background: hsla(0,0%,100%,.4);
+    border: 0;
+    cursor: pointer;
 }
 
 #slide_div1 {
-   position: relative;
-   z-index: 10;
-   overflow: auto;
-   transition: all 1s;
-   background-color: transparent;
+   animation-name: slide;
+   animation-duration: 1s;
+    position: relative;
+    z-index: 10;
+    overflow: hidden;
+    background-color: transparent;
 }
 
 #slide_div2 {
-   position: relative;
-   width: 30%;
-   height: 50%;
-   border-radius: 14px;
-   background-color: #fff;
-   box-shadow: 0 2px 12px rgb(0 0 0 / 50%);
-   margin: 10px;
-   z-index: 10;
-   overflow: auto;
-   font-family: sans-serif;
-   display: flex;
-   flex-direction: column;
-   justify-content: space-around;
-   transition: all 1s;
+    position: relative;
+    width: 30%;
+    height: 50%;
+    border-radius: 14px;
+    background-color: #fff;
+    box-shadow: 0 2px 12px rgb(0 0 0 / 50%);
+    margin: 10px;
+    z-index: 10;
+    overflow: hidden;
+    font-family: sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    transition: all 1s;
 }
 
 .todo-title {
-   font-size: 14px;
-   font-weight: 400;
-   text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
 }
 
 .todo-content {
-   position: relative;
-   flex:1;
-   overflow: auto;
-   box-sizing: border-box;
-   padding-block-end: 10px;
-   min-height: 70%;
-   max-height: 70%;
+    position: relative;
+    flex: 1;
+    overflow: auto;
+    box-sizing: border-box;
+    padding-block-end: 10px;
+    min-height: 70%;
+    max-height: 70%;
 }
 
 #todo-list > li > a {
-   background-color: #fff;
-   cursor: pointer;
+    background-color: #fff;
+    cursor: pointer;
 }
 
 @media screen and (max-width:650px) {
-   .searchbox {
-      display: none !important;
-   }
-   #slide_div2 {
-      display: none;
-   }
+    .searchbox {
+        display: none !important;
+    }
+    #slide_div2 {
+        display: none;
+    }
 }
 
-@media screen and (max-width:605px){
-   #clock {
-      font-size: 75px;
-   }
-   .nameQ {
-      font-size: 30px;
-      margin-top: 10px;
-   }
+@media screen and (max-width:605px) {
+    #clock {
+        font-size: 75px;
+    }
+    .nameQ {
+        font-size: 30px;
+        margin-top: 10px;
+    }
+    #login-form > input {
+       width: 20rem;
+    }
+
 }
 
 @media screen and (max-width:800px) {
-   #quote {
-      display: none;
-   }
+    #quote {
+        display: none;
+    }
 }
 
-@media screen and (max-height:490px){
-   .searchbox {
-      display: none !important;
-   }
+@media screen and (max-height:490px) {
+    .searchbox {
+        display: none !important;
+    }
 
 }
 
 @media screen and (max-height:460px) {
-   #quote  {
-      display: none;
-   }
+    #quote {
+        display: none;
+    }
 }
 
-
 @media screen and (max-height:340px) {
-   .viewport-sub {
-      display: none;
-   }
-   #login-form {
-      display: none;
-   }
-   .gitbox {
-      display: none;
-   }
-   .slidebtn {
-      display: none;
-   }
+    .viewport-sub {
+        display: none;
+    }
+    #login-form {
+        display: none;
+    }
+    .gitbox {
+        display: none;
+    }
+    .slidebtn {
+        display: none;
+    }
 }
 
 @media screen and (max-height:310px) {
-   #slide_div2 {
-      display: none;
-   }
+    #slide_div2 {
+        display: none;
+    }
 }
-
 
 @media screen and (max-height:237px) {
-   #clock {
-      font-size: 70px;
-   }
+    #clock {
+        font-size: 70px;
+    }
+}
+@keyframes slide {
+    from {
+        margin-left: 100%;
+        width: 300%;
+    }
+
+    to {
+        margin-left: 0;
+        width: 100%;
+    }
 }
 
-@media screen and (max-height:96px) {
-   #clock{
-      display: none;
-   }
-}
