--- a/css/style.css
+++ b/css/style.css
@@ -343,6 +343,10 @@ body ::-webkit-scrollbar-track {
     font-weight: 400;
     text-align: center;
     font-family: 'Black Han Sans', sans-serif;
+    border: 15px solid #05c3a7;
+    background:#05c3a7;
+    -webkit-text-stroke:1px #fff;
+    
 }
 
 .todo-content {
