--- a/css/style.css
+++ b/css/style.css
@@ -119,10 +119,32 @@ body ::-webkit-scrollbar-track {
     font-family: 'Noto Sans KR', sans-serif;
 }
 
+
+#todo-form > input::placeholder {
+    color: #a8a8a8;
+}
+
 .warningMsg {
     animation-name: shake;
-    animation-duration: 1s;
-    font-family: 'Noto Sans KR', sans-serif;
+    animation-duration: 0.1s;
+    animation-iteration-count: 7;
+}
+
+.warningMsg > input::placeholder {
+    color:#ff0000
+}
+
+@keyframes shake {
+    0% {
+        margin-left: 10px;
+    }
+    50% {
+        margin-left: -10px;
+    }
+
+    100% {
+        margin-left: 0;
+    }
 }
 
 #quote {
