--- a/css/style.css
+++ b/css/style.css
@@ -102,8 +102,7 @@ body ::-webkit-scrollbar-track {
     border-radius: 48px;
     box-sizing: border-box;
     margin: 10px;
-    box-shadow: inset 0 0 0 1.5px #05c3a7, 0 -10px 10px #fff;
-    transition: box-shadow 2s;
+    box-shadow: inset 0 0 0 1.5px #05c3a7, 0 -10px 10px transparent;
 }
 
 #todo-form > input {
@@ -130,8 +129,8 @@ body ::-webkit-scrollbar-track {
     animation-iteration-count: 7;
 }
 
-.warningMsg > input::placeholder {
-    color:#ff0000
+.warningPh::placeholder {
+    color: red;
 }
 
 @keyframes shake {
@@ -376,7 +375,6 @@ body ::-webkit-scrollbar-track {
     flex: 1;
     overflow: auto;
     box-sizing: border-box;
-    padding-block-end: 10px;
     min-height: 70%;
     max-height: 70%;
 }
