--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,7 @@ body ::-webkit-scrollbar-track {
     flex-direction: column;
     align-items: center;
     z-index: 1;
+    color: white;
     font-family: 'Play', sans-serif;
     font-size: 30px;
     font-weight: 600;
