--- a/src/css/style.css
+++ b/src/css/style.css
@@ -95,3 +95,17 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+/* 여기서 부터 내가 작성 힌 css  */
+.bgimg {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  object-position: center;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  opacity: 0.3;
+}
