--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,8 +45,8 @@ h1 {
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
+  height: 2em;
+  padding: 0.5em;
   will-change: filter;
 }
 .logo:hover {
@@ -96,6 +96,10 @@ button:focus-visible {
   }
 }
 
+ul {
+  list-style-type: none;
+}
+
 
 /* 여기서 부터 내가 작성 힌 css  */
 .bgimg {
@@ -108,4 +112,36 @@ button:focus-visible {
   top: 0;
   left: 0;
   opacity: 0.3;
+}
+
+.vite_with_ts {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 0 0.5em 0 0.5em;
+}
+
+.todo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.clock_date {
+  display: flex;
+  flex-direction: column;
+}
+
+span.clock {
+  font-size: 70px;
+  font-weight: 900;
+}
+span.date {
+  position: relative;
+  font-size: 20px;
+  font-weight: 500;
+}
+span.quote {
+  font-size: 30px;
+  font-weight: 700;
 }
