--- a/src/css/style.css
+++ b/src/css/style.css
@@ -126,38 +126,51 @@ ul {
 
 #slide {
   position: relative;
-  display: flex;
   transition: 0.5s;
 }
 
-.page-0, .page-1 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  white-space: pre-line;
-  word-break: break-all;
+.page-0 {
 }
 .clock_date {
   display: flex;
   flex-direction: column;
 }
-
-span.clock {
+.clock {
   font-size: 7em;
   font-weight: 900;
+  padding: 2.5rem;
 }
-span.date {
+.date {
   font-size: 2em;
-  font-weight: 500;
+  font-weight: 600;
+  padding: 1rem;
 }
-span.quote {
+.quotes {
+  display: flex;
+  flex-direction: column;
+  margin-top: 5px;
+}
+.quote {
   font-size: 3em;
   font-weight: 700;
 }
 
+.page-1 {
+  display: none;
+}
 .todo {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.button {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
