--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,14 @@
+html {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  place-items: center;
+  margin: 0;
+  min-height: 100vh
+}
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -22,14 +33,6 @@ a {
 }
 a:hover {
   color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -95,16 +98,6 @@ button:focus-visible {
   }
 }
 
-ul {
-  list-style-type: none;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-  padding-inline-start: 0;
-}
-
-/* 여기서 부터 내가 작성 힌 css  */
 .bgimg {
   object-fit: cover;
   width: 100%;
@@ -157,13 +150,16 @@ ul {
 
 .page-1 {
   display: none;
+  border: 6px solid #86dd83;
+  color: #000;
+  background: rgba(255, 255, 255, 0.933);
+  border-radius: 25px;
 }
 .todo {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-
 .button {
   cursor: pointer;
   height: 15px;
@@ -173,4 +169,21 @@ ul {
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
+}
+
+.todo__form {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+.todo__list  {
+  min-width: 400px;
+  max-width: 400px;
+  min-height: 394px;
+  max-height: 394px;
+  overflow: hidden;
+
+}
+.todo__input {
+  /* margin-top: 18px; */
 }
